[project]
name = "agent-aichamps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.6.1",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]
